# mymovo2

./: CMakeLists.txt  README.md
src/: GPSnoise.cpp  visodo.cpp  vo_features.h
